--- a/14_Step_11.ipynb
+++ b/14_Step_11.ipynb
@@ -253,6 +253,20 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "\n",
+        "*   The Poisson equation is a diffusion-type equation.\n",
+        "\n",
+        "*   The terms involve second derivatives and products of first derivatives.\n",
+        "\n",
+        "*   Using central differences for first derivatives ensures second-order accuracy."
+      ],
+      "metadata": {
+        "id": "LEo7CLAjKzP2"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "yETGhHICHNDh"
       },
@@ -282,7 +296,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 1,
       "metadata": {
         "collapsed": true,
         "id": "p5yihFvaHNDh"
@@ -297,7 +311,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 2,
       "metadata": {
         "id": "6jiGhfP7HNDh"
       },
@@ -325,6 +339,35 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "x = numpy.linspace(0, 2, nx)\n",
+        "y = numpy.linspace(0, 2, ny)\n",
+        "X, Y = numpy.meshgrid(x, y)\n",
+        "X.shape"
+      ],
+      "metadata": {
+        "id": "1DJplrxdUdlJ",
+        "outputId": "ec145973-6ce6-4b63-9c69-b8b05cfe102b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(41, 41)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "DenMfw0DHNDh"
@@ -335,7 +378,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {
         "id": "6cUqYIomHNDi"
       },
@@ -365,7 +408,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "metadata": {
         "id": "wQ7dF-a8HNDi"
       },
@@ -402,7 +445,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "metadata": {
         "id": "eUwutiYDHNDi"
       },
@@ -466,7 +509,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "metadata": {
         "collapsed": true,
         "id": "_oAWnJbMHNDj"
@@ -483,14 +526,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 624
         },
         "id": "lxE97oAnHNDj",
-        "outputId": "789cb04d-cd39-4a2a-e07d-09bedb11a810"
+        "outputId": "0c3af8fd-f8e7-4704-9d58-5fcdc55c1812"
       },
       "outputs": [
         {
@@ -509,9 +552,9 @@
         "# plotting the pressure field as a contour\n",
         "pyplot.contourf(X, Y, p, alpha=0.5, cmap=cm.viridis)\n",
         "pyplot.colorbar()\n",
-        "# plotting the pressure field outlines\n",
+        "# # plotting the pressure field outlines\n",
         "pyplot.contour(X, Y, p, cmap=cm.viridis)\n",
-        "# plotting velocity field\n",
+        "# # plotting velocity field\n",
         "pyplot.quiver(X[::2, ::2], Y[::2, ::2], u[::2, ::2], v[::2, ::2])\n",
         "pyplot.xlabel('X')\n",
         "pyplot.ylabel('Y');"
@@ -528,7 +571,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 16,
       "metadata": {
         "collapsed": true,
         "id": "QSBMAd68HNDj"
@@ -545,7 +588,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -590,7 +633,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
